0.512 2023-12-08
  [New Features]
    * Add the new_with_family method class to the Sys::Socket::Sockaddr class.
  [Incompatible Changes]
    * Remove the to_family_sockaddr method from the Sys::Socket class.
    * Remove deprecated the spvm_socket_errno method and the spvm_socket_strerror method from the Sys::Socket class.
  [Document Fix]
    * Fix many Sys::Socket documents.
  [Incompatible Changes]
    * Remove the Sys::Socket::Error class.
    * Sys::Socket::Error::InetInvalidNetworkAddress inherits the Error class.
    * The gai_strerror method in the Sys::Socket class throws an exception in the system call failed.
0.511 2023-12-07
  [New Features]
    * The Sys::Socket::Sockaddr::Un class work well in Windows.
    * The Sys::Socket::Addrinfo supports Sys::Socket::Sockaddr::Un in Windows.
0.510 2023-12-07
  [New Features]
    * The Sys::Socket::Sockaddr::Un class work well in Windows.
    * The Sys::Socket::Addrinfo supports Sys::Socket::Sockaddr::Un in Windows.
  [Deprecations and New Features]
    * Deprecates the spvm_socket_errno method from the Sys::Socket class and add the errno method to the Sys::Socket::Errno.
    * Deprecates the spvm_socket_strerror method from the Sys::Socket class and add the strerror method to the Sys::Socket::Errno.
  [Document Fix]
    * Add the doc of the Sys::Socket::Error class.
0.509 2023-12-04
  [Incompatible Changes]
    * The getc method in the Sys::IO throw an exception if the return value is C<EOF> and C<ferror(stream)> is non-zero.
    * The fread method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
    * The fwrite method in the Sys::IO throw an exception if the return value is less than $nmemb and C<ferror(stream)> is non-zero.
    * The fcntl method can not recieve object type $command_arg. Only Int or Sys::IO::Flock.
    * The get_readlink_buffer_size method in the Sys::IO is removed.